--- a/app/src/main/res/layout/default_card.xml
+++ b/app/src/main/res/layout/default_card.xml
@@ -19,7 +19,7 @@
             android:layout_height="170dp"
             android:scaleType="centerCrop"
             android:id="@+id/headingImage"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             app:shapeAppearanceOverlay="@style/SoftCorner"
             app:srcCompat="@drawable/baseline_360_24"/>
 
@@ -27,18 +27,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginVertical="8dp"
+            android:layout_marginVertical="1dp"
             android:layout_marginHorizontal="15dp"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvHeading"
+            <LinearLayout
                 android:layout_width="305dp"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="19sp"
-                android:fontFamily="@font/times_new_roman"
-                android:text="Heading" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvHeading"
+                    android:layout_width="305dp"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="19sp"
+                    android:fontFamily="@font/times_new_roman"
+                    android:text="Heading" />
+
+                <TextView
+                    android:id="@+id/tvExcerpt"
+                    android:layout_width="305dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:textSize="15sp"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="@font/times_new_roman"
+                    android:text="Excerpt" />
+            </LinearLayout>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/btnBookmark"
@@ -47,7 +63,6 @@
                 android:layout_gravity="center"
                 android:clickable="true"
                 android:contentDescription="Add bookmark"
-                android:elevation="5dp"
                 android:focusable="true"
                 app:srcCompat="@drawable/baseline_bookmark_border_24" />
 
