--- a/app/src/main/res/layout/activity_news_web_view.xml
+++ b/app/src/main/res/layout/activity_news_web_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".ui.NewsWebView">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -23,21 +23,9 @@
 
     </androidx.cardview.widget.CardView>
 
-    <FrameLayout
+    <WebView
+        android:id="@+id/newsWebView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/frameLayout"
-        android:layout_weight="1">
-    </FrameLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:labelVisibilityMode="selected"
-        android:id="@+id/bottomNav"
-        android:elevation="100dp"
-        app:itemTextColor="@color/white"
-        android:background="@drawable/nav_backgound"
-        app:menu="@menu/items"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
