--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0000ff</color>
     <color name="green">#008000</color>
-    <color name="purple">#FF6200EE</color>
+    <color name="purple">#8d72e8</color>
+    <color name="lavender">#e8bffb</color>
 </resources>
