--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="green">#008000</color>
     <color name="purple">#8d72e8</color>
     <color name="lavender">#e8bffb</color>
+    <color name="red">#ff0000</color>
 </resources>
