--- a/app/src/main/res/menu/items.xml
+++ b/app/src/main/res/menu/items.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    app:cnb_unselectedColor="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:title="Home"
         android:id="@+id/home"
-        android:icon="@drawable/baseline_home_24"/>
+        android:icon="@drawable/baseline_home_24"
+        app:cnb_backgroundColor="#ff785b"
+        app:cnb_iconColor="@color/white"
+        app:cnb_textColor="@color/white"/>
     <item android:title="Search"
         android:id="@+id/search"
-        android:icon="@drawable/baseline_search_24"/>
+        android:icon="@drawable/baseline_search_24"
+        app:cnb_backgroundColor="#ff785b"
+        app:cnb_iconColor="@color/white"
+        app:cnb_textColor="@color/white"/>
     <item android:title="Bookmarks"
         android:id="@+id/bookmarks"
-        android:icon="@drawable/baseline_bookmarks_24"/>
+        android:icon="@drawable/baseline_bookmarks_24"
+        app:cnb_backgroundColor="#ff785b"
+        app:cnb_iconColor="@color/white"
+        app:cnb_textColor="@color/white"/>
 </menu>
