--- a/app/src/main/res/menu/items.xml
+++ b/app/src/main/res/menu/items.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cnb_unselectedColor="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:title="Home"
         android:id="@+id/home"
         android:icon="@drawable/home_24px"
