--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="purple">#8d72e8</color>
     <color name="lavender">#e8bffb</color>
     <color name="red">#ff0000</color>
+    <color name="orange">#ff785b</color>
+    <color name="dark_blue">#141932</color>
 </resources>
