--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,16 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:backgroundTint="@color/purple">
+        android:backgroundTint="@color/dark_blue">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/btnProfile"
             android:layout_width="39dp"
             android:layout_height="39dp"
-            android:layout_gravity="end |bottom"
+            android:layout_gravity="end|bottom"
             android:layout_marginBottom="20dp"
-            android:layout_marginRight="40dp"
-            app:strokeColor="@color/lavender"
+            android:layout_marginEnd="40dp"
+            app:strokeColor="@color/orange"
             app:strokeWidth="3dp"
             android:padding="2dp"
             app:shapeAppearanceOverlay="@style/circular"
