--- a/app/src/main/res/layout/activity_news_web_view.xml
+++ b/app/src/main/res/layout/activity_news_web_view.xml
@@ -11,16 +11,20 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:backgroundTint="@color/blue">
+        android:backgroundTint="@color/dark_blue">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_gravity="right"
-            android:layout_margin="55dp"
-            android:contentDescription="Profile Icon">
-        </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/btnProfile"
+            android:layout_width="39dp"
+            android:layout_height="39dp"
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="40dp"
+            app:strokeColor="@color/orange"
+            app:strokeWidth="3dp"
+            android:padding="2dp"
+            app:shapeAppearanceOverlay="@style/circular"
+            app:srcCompat="@drawable/blank_profile_picture" />
     </androidx.cardview.widget.CardView>
 
     <WebView
