--- a/app/src/main/res/menu/items.xml
+++ b/app/src/main/res/menu/items.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:title="Home"
         android:id="@+id/home"
         android:icon="@drawable/home_24px"
-        app:cnb_backgroundColor="#ff785b"
+        app:cnb_backgroundColor="@color/orange"
         app:cnb_iconColor="@color/white"
-        app:cnb_textColor="@color/white"/>
+        app:cnb_textColor="@color/white"
+        tools:ignore="HardcodedText" />
     <item android:title="Search"
         android:id="@+id/search"
         android:icon="@drawable/baseline_search_24"
-        app:cnb_backgroundColor="#ff785b"
+        app:cnb_backgroundColor="@color/orange"
         app:cnb_iconColor="@color/white"
-        app:cnb_textColor="@color/white"/>
+        app:cnb_textColor="@color/white"
+        tools:ignore="HardcodedText" />
     <item android:title="Bookmarks"
         android:id="@+id/bookmarks"
         android:icon="@drawable/book_24px"
-        app:cnb_backgroundColor="#ff785b"
+        app:cnb_backgroundColor="@color/orange"
         app:cnb_iconColor="@color/white"
-        app:cnb_textColor="@color/white"/>
+        app:cnb_textColor="@color/white"
+        tools:ignore="HardcodedText" />
 </menu>
