--- a/app/src/main/res/layout/default_card.xml
+++ b/app/src/main/res/layout/default_card.xml
@@ -23,50 +23,38 @@
             app:shapeAppearanceOverlay="@style/SoftCorner"
             app:srcCompat="@drawable/baseline_360_24"/>
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvHeading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginVertical="1dp"
-            android:layout_marginHorizontal="15dp"
-            android:orientation="horizontal">
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:fontFamily="@font/times_new_roman"
+            android:layout_marginHorizontal="10dp"
+            android:text="Heading" />
 
-            <LinearLayout
-                android:layout_width="312dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tvHeading"
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="19sp"
-                    android:fontFamily="@font/times_new_roman"
-                    android:text="Heading" />
-
-                <TextView
-                    android:id="@+id/tvExcerpt"
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:textSize="15sp"
-                    android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/times_new_roman"
-                    android:text="Excerpt" />
-            </LinearLayout>
+        <TextView
+            android:id="@+id/tvExcerpt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:textSize="12sp"
+            android:layout_marginBottom="5dp"
+            android:textStyle="italic"
+            android:layout_marginHorizontal="10dp"
+            android:text="Excerpt" />
 
             <ImageButton
                 android:id="@+id/btnBookmark"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_gravity="center"
-                android:background="@drawable/image_button_background"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_gravity="end"
+                android:background="@android:color/transparent"
                 android:clickable="true"
                 android:contentDescription="Add bookmark"
                 android:focusable="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="5dp"
                 app:srcCompat="@drawable/baseline_bookmark_border_24" />
-
-        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
