--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="red">#ff0000</color>
     <color name="orange">#ff785b</color>
     <color name="dark_blue">#141932</color>
+    <color name="welcome">#E2E3DE</color>
 </resources>
