--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,7 +10,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
         android:backgroundTint="@color/dark_blue">
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -18,13 +18,14 @@
             android:layout_width="39dp"
             android:layout_height="39dp"
             android:layout_gravity="end|bottom"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="15dp"
             android:layout_marginEnd="40dp"
             app:strokeColor="@color/orange"
             app:strokeWidth="3dp"
             android:padding="2dp"
             app:shapeAppearanceOverlay="@style/circular"
             app:srcCompat="@drawable/blank_profile_picture" />
+
     </androidx.cardview.widget.CardView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,7 +46,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/circular"
-            app:strokeColor="@color/lavender"
+            app:strokeColor="@color/orange"
             app:strokeWidth="5dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -79,7 +80,9 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:fontFamily="@font/times_new_roman"
+            android:gravity="center"
             android:layout_gravity="center_vertical"
+            android:textStyle="bold"
             android:text="Name : " />
 
         <ImageButton
@@ -92,23 +95,35 @@
 
     <TextView
         android:id="@+id/tvEmail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:fontFamily="@font/times_new_roman"
         android:layout_gravity="center_vertical"
+        android:gravity="center"
         android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="15dp"
+        android:textStyle="bold"
         android:text="Email : " />
 
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:textSize="18sp"
-        android:backgroundTint="@color/purple"
-        android:text="Log Out" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/dark_blue"
+            android:text="Log Out"
+            android:textColor="@color/orange"
+            android:textSize="19sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
