--- a/app/src/main/res/layout/activity_news_web_view.xml
+++ b/app/src/main/res/layout/activity_news_web_view.xml
@@ -26,6 +26,17 @@
             app:shapeAppearanceOverlay="@style/circular"
             app:srcCompat="@drawable/blank_profile_picture" />
 
+        <TextView
+            android:id="@+id/tvView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="20dp"
+            android:textSize="40dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:text="Breeze" />
+
     </androidx.cardview.widget.CardView>
 
     <WebView
