--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background_all"
     tools:context=".ProfileActivity">
 
     <androidx.cardview.widget.CardView
@@ -101,6 +102,7 @@
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             app:srcCompat="@drawable/baseline_edit_24" />
     </LinearLayout>
 
