--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.591"
         app:lottie_autoPlay="true"
-        app:lottie_rawRes="@raw/speaker" />
+        app:lottie_rawRes="@raw/news_app" />
 
     <TextView
         android:id="@+id/tvName"
