--- a/app/src/main/res/layout/default_card.xml
+++ b/app/src/main/res/layout/default_card.xml
@@ -71,6 +71,26 @@
             android:layout_marginHorizontal="10dp"
             android:text="Excerpt" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btnShare"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="end"
+                android:background="@android:color/transparent"
+                android:clickable="true"
+                android:layout_marginEnd="10dp"
+                android:contentDescription="Share article"
+                android:focusable="true"
+                app:srcCompat="@drawable/share_24px" />
+
             <ImageButton
                 android:id="@+id/btnBookmark"
                 android:layout_width="24dp"
@@ -80,8 +100,8 @@
                 android:clickable="true"
                 android:contentDescription="Add bookmark"
                 android:focusable="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"
                 app:srcCompat="@drawable/baseline_bookmark_border_24" />
+
+        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
