--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,16 +40,19 @@
 
     </androidx.cardview.widget.CardView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="205dp"
-        android:layout_height="205dp"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center_horizontal">
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="10dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/profileImage"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
             android:padding="5dp"
             android:src="@drawable/blank_profile_picture"
@@ -65,60 +68,64 @@
             android:id="@+id/btnChangePic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="130dp"
-            android:layout_marginBottom="10dp"
             android:backgroundTint="@color/purple"
             android:clickable="true"
             android:focusable="true"
-            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
-            app:layout_constraintEnd_toEndOf="@+id/profileImage"
-            app:layout_constraintHorizontal_bias="0.932"
-            app:layout_constraintStart_toStartOf="@+id/profileImage"
-            app:layout_constraintTop_toTopOf="@+id/profileImage"
-            app:layout_constraintVertical_bias="0.0"
+            android:scaleType="fitCenter"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.925"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.946"
             app:srcCompat="@drawable/baseline_camera_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:id="@+id/tvName"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="20sp"
-            android:fontFamily="@font/times_new_roman"
-            android:gravity="center"
-            android:layout_gravity="center_vertical"
-            android:textStyle="bold"
-            android:text="Name : " />
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginTop="20dp">
 
-        <ImageButton
-            android:id="@+id/btnEditName"
-            android:layout_width="72dp"
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:textColor="@color/black"
+                android:layout_gravity="center_vertical"
+                android:text="Name" />
+
+            <ImageButton
+                android:id="@+id/btnEditName"
+                android:layout_width="72dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/baseline_edit_24" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            app:srcCompat="@drawable/baseline_edit_24" />
+            android:textSize="15sp"
+            android:textColor="@color/flat_grey_dark_2"
+            android:layout_gravity="center_vertical"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginVertical="5dp"
+            android:text="Email" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:fontFamily="@font/times_new_roman"
-        android:layout_gravity="center_vertical"
-        android:gravity="center"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="15dp"
-        android:textStyle="bold"
-        android:text="Email : " />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
